...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.PaymentSimulationFragment">

    <!-- Idle State: Waiting for NFC -->
    <TextView
        android:id="@+id/text_waiting_for_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_pay"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
...
            app:layout_constraintTop_toBottomOf="@+id/text_failure" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Display Amount -->
    <TextView
        android:id="@+id/text_amount_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
...
